--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,51 +45,75 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_main1"
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="35dp"
-        android:backgroundTint="#88BA37"
-        android:drawableLeft="@drawable/png_05"
-        android:text="작물별 도감 정보\n\n-식량 -과수\n-채소 -화훼\n-특용 -잡초"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_main1"
+            android:layout_width="180dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:backgroundTint="#B4D88A"
+            android:text="작물별 도감 \n정보\n\n-식량 -과수\n-채소 -화훼\n-특용 -잡초"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        <Button
+            android:id="@+id/btn_main2"
+            android:layout_width="180dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#B4D88A"
+            android:text="병해충 도감 \n정보\n\n -병 -병원체 \n -곤충 -해충 \n-천적 -잡초"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_main3"
+            android:layout_width="385dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="35dp"
+            android:backgroundTint="#71A337"
+            android:drawableLeft="@drawable/png_07"
+            android:text="나만의 텃밭 \n만들기"
+            android:textColor="@color/black"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_main4"
+            android:layout_width="385dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="35dp"
+            android:backgroundTint="#568124"
+            android:drawableLeft="@drawable/png_08"
+            android:text="병해충 예측 서비스 \n\n -예측 지도 \n-예측 조사 비교 \n -예찰 검색\n -시도,시군구 별"
+            android:textColor="@color/black"
+            android:textSize="19sp"
+            android:textStyle="bold" />
 
 
-    <Button
-        android:id="@+id/btn_main2"
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="35dp"
-        android:backgroundTint="#599123"
-        android:drawableLeft="@drawable/png_06"
-        android:text="병해충 도감 정보\n\n -병 -병원체 \n -곤충 -해충 \n-천적곤충 -잡초"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <Button
-
-        android:id="@+id/btn_main3"
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="35dp"
-        android:backgroundTint="#417312"
-        android:drawableLeft="@drawable/png_07"
-        android:text="병해충 예측 서비스 \n\n -예측 지도 \n-예측 조사 비교 \n -예찰 검색\n -시도,시군구 별"
-        android:textColor="@color/black"
-        android:textSize="19sp"
-        android:textStyle="bold" />
-
+    </LinearLayout>
 
 
 
 </LinearLayout>
+
